cambios en el sitio

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <section class="bienvenidos">
                 <h2>Bienvenidos</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic maxime? Minima laborum dignissimos nulla consequuntur quia saepe hic, voluptatem neque inventore repellat ab omnis vero earum optio fugit eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aliquid eligendi voluptatem optio. Quaerat cumque, tempora aliquid nulla facilis iure placeat deleniti sit itaque earum exercitationem quos culpa adipisci animi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, hic maxime? Minima laborum dignissimos nulla consequuntur quia saepe hic, voluptatem neque inventore repellat ab omnis vero earum optio fugit eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aliquid eligendi voluptatem optio. Quaerat cumi.</p>
             </section>
             <section class="testimonios">
                 <h2>Testimonios</h2>
